update and delete implemented

--- a/Pages/Quejas/Index.razor
+++ b/Pages/Quejas/Index.razor
@@ -10,25 +10,31 @@
 
 <h4>Portal de quejas</h4>
 <hr>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum sunt, ex tempora similique obcaecati explicabo hic
-    placeat soluta dolor praesentium repellat vero sapiente accusantium, eos reiciendis. Dolore nisi iusto eaque!. Lorem
-    ipsum dolor sit, amet consectetur adipisicing elit. Commodi odio, velit quo enim earum error ipsam blanditiis
-    ducimus, minus cumque ab deleniti. Provident ad delectus pariatur debitis eum labore ut.</p>
-<h6>Objetivo</h6>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum iure sunt provident voluptatum expedita consequuntur,
-    esse iste ipsam itaque, numquam repudiandae. Veniam odio modi minima voluptatum, consequuntur itaque cum corporis.
-</p>
+<div class="">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum sunt, ex tempora similique obcaecati explicabo
+        hic
+        placeat soluta dolor praesentium repellat vero sapiente accusantium, eos reiciendis. Dolore nisi iusto eaque!.
+        Lorem
+        ipsum dolor sit, amet consectetur adipisicing elit. Commodi odio, velit quo enim earum error ipsam blanditiis
+        ducimus, minus cumque ab deleniti. Provident ad delectus pariatur debitis eum labore ut.</p>
+    <h6>Objetivo</h6>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum iure sunt provident voluptatum expedita
+        consequuntur,
+        esse iste ipsam itaque, numquam repudiandae. Veniam odio modi minima voluptatum, consequuntur itaque cum
+        corporis.
+    </p>
+</div>
 <div class="button_">
     <a class="btn btn-danger" href="queja/form">Presentar queja</a>
 </div>
 
 <hr>
 
-<h6>Quejas registradas</h6>
+<h5>Quejas registradas</h5>
 
 @if (quejas != null)
 {
-    <table class="table">
+    <table class="mytable table w-100">
         <thead>
             <tr>
                 <th scope="col">ID</th>
