--- a/Pages/Sugerencias/Form.razor
+++ b/Pages/Sugerencias/Form.razor
@@ -9,6 +9,7 @@
 
 @if (Id == null)
 {
+    <PageTitle>Presentar sugerencia</PageTitle>
 
     <div class="container w-50 mb-2">
         <h4 class="text-center">Presentar sugerencia</h4>
@@ -18,33 +19,42 @@
 
     <EditForm class="container_form container w-50" Model="@sugerencia">
 
-        <div class="form-floating mb-3">
-            <InputText @bind-Value="@sugerencia.NombreCiudadano" type="text" class="form-control" id="Nombre"
-            placeholder="Nombre">
-            </InputText>
-            <label for="Nombre">Nombre</label>
+        <div class="row g-3">
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.NombreCiudadano" type="text" class="form-control" id="Nombre"
+                    placeholder="Nombre">
+                    </InputText>
+                    <label for="Nombre">Nombre</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.ApellidosCiudadano" type="text" class="form-control" id="Apellidos"
+                    placeholder="Apellidos">
+                    </InputText>
+                    <label for="Apellidos">Apellidos</label>
+                </div>
+            </div>
         </div>
 
-
-        <div class="form-floating mb-3">
-            <InputText @bind-Value="@sugerencia.ApellidosCiudadano" type="text" class="form-control" id="Apellidos"
-            placeholder="Apellidos">
-            </InputText>
-            <label for="Apellidos">Apellidos</label>
-        </div>
-
-        <div class="form-floating mb-3">
-            <InputText @bind-Value="@sugerencia.CorreoCiudadano" type="text" class="form-control" id="Correo"
-            placeholder="Correo">
-            </InputText>
-            <label for="Correo">Correo</label>
-        </div>
-
-        <div class="form-floating mb-3">
-            <InputText @bind-Value="@sugerencia.TelefonoCiudadano" type="text" class="form-control" id="Telefono"
-            placeholder="Telefono">
-            </InputText>
-            <label for="Telefono">Telefono</label>
+        <div class="row g-3">
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.CorreoCiudadano" type="text" class="form-control" id="Correo"
+                    placeholder="Correo">
+                    </InputText>
+                    <label for="Correo">Correo</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.TelefonoCiudadano" type="text" class="form-control" id="Telefono"
+                    placeholder="Telefono">
+                    </InputText>
+                    <label for="Telefono">Telefono</label>
+                </div>
+            </div>
         </div>
 
 
@@ -55,22 +65,71 @@
         </div>
 
         <div class="row g-2 ms-1">
-            <button @onclick="Save" type="submit" class="btn btn-success btn-large mt-4 me-4 col-auto">Guardar</button>
+            <button @onclick="Save" type="submit" class="btn btn-success mt-4 me-4 col-auto">Guardar</button>
         </div>
     </EditForm>
-    @* <EditForm Model="@sugerencia">
-        <label>Nombre</label>
-        <InputText @bind-Value="@sugerencia.NombreCiudadano"></InputText>
-        <label>Apellido</label>
-        <InputText @bind-Value="@sugerencia.ApellidosCiudadano"></InputText>
-        <label>Correo</label>
-        <InputText @bind-Value="@sugerencia.CorreoCiudadano"></InputText>
-        <label>Telefono</label>
-        <InputText @bind-Value="@sugerencia.TelefonoCiudadano"></InputText>
-        <label>Descripcion</label>
-        <InputText @bind-Value="@sugerencia.Descripcion"></InputText>
-        <button @onclick="Save"></button>
-        </EditForm> *@
+}
+else
+{
+    <PageTitle>Detalles sugerencia</PageTitle>
+
+    <div class="container w-50 mb-2">
+        <h4 class="text-center">Detalles sugerencia</h4>
+    </div>
+
+    <hr>
+
+    <EditForm class="container_form container" Model="@sugerencia">
+
+        <div class="row g-3">
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.NombreCiudadano" type="text" class="form-control" id="Nombre"
+                    placeholder="Nombre">
+                    </InputText>
+                    <label for="Nombre">Nombre</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.ApellidosCiudadano" type="text" class="form-control" id="Apellidos"
+                    placeholder="Apellidos">
+                    </InputText>
+                    <label for="Apellidos">Apellidos</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="row g-3">
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.CorreoCiudadano" type="text" class="form-control" id="Correo"
+                    placeholder="Correo">
+                    </InputText>
+                    <label for="Correo">Correo</label>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-floating mb-3">
+                    <InputText @bind-Value="@sugerencia.TelefonoCiudadano" type="text" class="form-control" id="Telefono"
+                    placeholder="Telefono">
+                    </InputText>
+                    <label for="Telefono">Telefono</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-floating">
+            <InputTextArea @bind-Value="@sugerencia.Descripcion" class="form-control" placeholder="descripcion"
+            id="descripcion" style="height: 200px"></InputTextArea>
+            <label for="descripcion">Descripción</label>
+        </div>
+
+        <div class="row g-2 ms-1">
+            <button @onclick="Update" type="submit" class="btn btn-success mt-4 me-4 col-auto">Actualizar</button>
+            <button @onclick="Delete" type="submit" class="btn btn-danger mt-4 me-4 col-auto">Eliminar</button>
+        </div>
+    </EditForm>
 }
 
 
@@ -78,6 +137,14 @@
     [Parameter]
     public int? Id { get; set; }
     SugerenciaModel sugerencia = new SugerenciaModel();
+
+    protected override async Task OnInitializedAsync()
+    {
+        if (Id != null)
+        {
+            sugerencia = await http.GetFromJsonAsync<SugerenciaModel>($"api/sugerencia/{Id}");
+        }
+    }
 
     private async Task Save()
     {
@@ -90,5 +157,23 @@
         {
             throw new Exception(e.Message);
         }
+    }
+
+    private async Task Update()
+    {
+        try
+        {
+            await http.PutAsJsonAsync<SugerenciaModel>($"api/sugerencia/{Id}", sugerencia);
+            nav.NavigateTo("/sugerencias");
+        }
+        catch (Exception e)
+        {
+            throw new Exception(e.Message);
+        }
+    }
+
+    private void Delete()
+    {
+        nav.NavigateTo($"/sugerencia/delete/{Id}");
     }
 }
