--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,8 +2,64 @@
 
 <PageTitle>Inicio</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Bienvenido a T'aan Bus.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="d-flex justify-content-center">
+    <div class="row w-75 d-flex">
+        <h1>Taan bus</h1>
+        <hr>
+        <div class="container_taanbus col">
+            <div class="row align-items-start">
+                <div class="col">
+                    <p> Somos un grupo estudiantil de la UTM que tiene problemas con el transporte público, además de
+                        que hemos notado en nuestra presencia en los paraderoros públicos que muchas personas tanto
+                        niños, embarazadas y de la tercera edad los cuáles sufren ciertos problemas al momento de
+                        esperar el camión y en el camión. En nuestro caso hemos tenido problemas personales, en los
+                        paraderos, en el camión, con el personal de transporte además del uso de las credenciales de
+                        este nos ha ocasionado muchos problemas al respecto, discusiones entre otras cosas. </p>
+                    <h3>Objetivo</h3>
+                    <p>Nuestro objetivo es mejorar este servicio el cuál hemos calculado gana una cantidad considerada
+                        de dinero, además de que se necesita su mejora, para la apariencia de la ciudad, que haya más
+                        equidad en las zonas de Mérida, sean más higienicos y espaciosos sobre todo por el tema de
+                        COVID-19.</p>
+                </div>
+            </div>
+            <div class="container ">
+                <div class="col">
+                    <img style="width: 7rem; height: auto;"
+                        src="https://cdn-icons.flaticon.com/png/512/1048/premium/1048333.png?token=exp=1645423486~hmac=d4d5c26b9320ef984187d5708367a02a">
+                </div>
+            </div>
+        </div>
+        <div class="col w-25" style="border: 1px solid red;">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="..." class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="..." class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
