--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,63 +2,120 @@
 
 <PageTitle>Inicio</PageTitle>
 
-<div class="d-flex justify-content-center">
-    <div class="row w-75 d-flex">
-        <h1>Taan bus</h1>
+<div class="d-flex justify-content-center mb-4">
+    <div class="row w-100 d-flex">
+        <h1 class="display-5">T'aan bus <small class="text-muted">Hablar del camión</small></h1>
         <hr>
         <div class="container_taanbus col">
             <div class="row align-items-start">
                 <div class="col">
-                    <p> Somos un grupo estudiantil de la UTM que tiene problemas con el transporte público, además de
+                    <p class="lead"> Somos un grupo estudiantil de la UTM que tiene problemas con el transporte público,
+                        además de
                         que hemos notado en nuestra presencia en los paraderoros públicos que muchas personas tanto
                         niños, embarazadas y de la tercera edad los cuáles sufren ciertos problemas al momento de
                         esperar el camión y en el camión. En nuestro caso hemos tenido problemas personales, en los
                         paraderos, en el camión, con el personal de transporte además del uso de las credenciales de
                         este nos ha ocasionado muchos problemas al respecto, discusiones entre otras cosas. </p>
-                    <h3>Objetivo</h3>
-                    <p>Nuestro objetivo es mejorar este servicio el cuál hemos calculado gana una cantidad considerada
-                        de dinero, además de que se necesita su mejora, para la apariencia de la ciudad, que haya más
-                        equidad en las zonas de Mérida, sean más higienicos y espaciosos sobre todo por el tema de
-                        COVID-19.</p>
                 </div>
             </div>
             <div class="container ">
                 <div class="col">
-                    <img style="width: 7rem; height: auto;"
-                        src="https://cdn-icons.flaticon.com/png/512/1048/premium/1048333.png?token=exp=1645423486~hmac=d4d5c26b9320ef984187d5708367a02a">
+                    <img style="width: 45rem; height: auto;"
+                        src="https://t3.ftcdn.net/jpg/03/18/67/34/360_F_318673433_dEutuxW9Wppy6UsFwYBy8KQr8N2wgSnA.jpg">
                 </div>
             </div>
         </div>
-        <div class="col w-25" style="border: 1px solid red;">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="..." class="img-fluid rounded-start" alt="...">
+        <div class="col w-50">
+            <div class="container">
+                <div class="row row-cols-1 shadow p-3 mb-5 bg-body rounded">
+                    <div class="col">
+                        <h5>Misión</h5>
+                        <p class="lead">Promover un servicio de transporte público cómodo y óptimo para todo público.
+                        </p>
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
+                    <div class="col">
+                        <h5>Visión</h5>
+                        <p class="lead">Ser una plataforma fiable y confiable para los usuarios del transporte público.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <h5>Valores</h5>
+                        <p class="lead">
+                        <ul>
+                            <li class="lead">Calidad: Servicios de primer nivel para la comunidad.</li>
+                            <li class="lead">Colaboración: Escuchar y potenciar las ideas innovadoras de la comunidad.
+                            </li>
+                        </ul>
+                        </p>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="..." class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                    </div>
-                </div>
+        </div>
+    </div>
+</div>
+
+<div class="card mb-3 col shadow p-3 mb-5 bg-body rounded">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="http://www.mcp.es/sites/default/files/imagenes/fotos/bus_verde_640.jpg"
+                class="img-fluid rounded-start" alt="..." style="width: 80rem; height: auto;">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="display-6">¿Por qué es importante el transporte público?</h5>
+                <p class="lead">En México diariamente se realizan 130 millones de viajes, mientras que 25% de la
+                    población
+                    no viaja debido a sus actividades o por la falta de infraestructura, mientras que 80% de los
+                    mexicanos usa transporte público, lo que equivale a 8 de cada 10 viajes. Sin embargo, este rubro es
+                    el peor calificado por la gente.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="card mb-3 col shadow p-3 mb-5 bg-body rounded">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="https://archivo.eluniversal.com.mx/entidades/yucatan/modernizacion-del-transporte-publico-de-merida/galeria/img/05.jpg"
+                class="img-fluid rounded-start" alt="..." style="width: 80rem; height: auto;">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="display-6">¿Por qué usarlo?</h5>
+                <p class="lead">
+                <ul>
+                    <li>Contamina menos que el vehículo privado. El transporte público es la alternativa más ecológica
+                        para los desplazamientos que se hacen en la ciudad. La emisión de gases es mucho menor.
+                    </li>
+                    <li>El uso masivo del vehículo privado colapsa las ciudades y las hace más sucias y más ruidosas.
+                        Por eso el transporte público es la alternativa idónea para mejorar la movilidad urbana y evitar
+                        en gran medida las retenciones y atascos.</li>
+                    <li>Usar el transporte público resulta más barato que el vehículo privado. Calcula los gastos del
+                        automóvil, además de su mantenimiento, seguro, aparcamiento y combustible.</li>
+                </ul>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="card mb-3 col shadow p-3 mb-5 bg-body rounded">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="http://www.yucatan.gob.mx/docs/saladeprensa/4468_1_280.jpg" class="img-fluid rounded-start"
+                alt="..." style="width: 80rem; height: auto;">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="display-6">Objetivo</h5>
+                <p class="lead">Nuestro objetivo es mejorar este servicio el cuál hemos calculado gana
+                    una
+                    cantidad considerada
+                    de dinero, además de que se necesita su mejora, para la apariencia de la ciudad, que
+                    haya
+                    más
+                    equidad en las zonas de Mérida, sean más higienicos y espaciosos sobre todo por el tema
+                    de
+                    COVID-19.</p>
             </div>
         </div>
     </div>
