--- a/Pages/Quejas/Delete.razor
+++ b/Pages/Quejas/Delete.razor
@@ -10,7 +10,7 @@
 {
     <PageTitle>Eliminar queja</PageTitle>
     <div class="container w-50 mb-2">
-        <h3 class="text-center">Eliminar queja</h3>
+        <h3 class="text-center display-6">Eliminar queja</h3>
     </div>
     <hr>
     <div class="container w-50 mb-2 mt-2">
