--- a/Pages/Sugerencias/Form.razor
+++ b/Pages/Sugerencias/Form.razor
@@ -12,7 +12,7 @@
     <PageTitle>Presentar sugerencia</PageTitle>
 
     <div class="container w-50 mb-2">
-        <h4 class="text-center">Presentar sugerencia</h4>
+        <h4 class="text-center display-6">Presentar sugerencia</h4>
     </div>
 
     <hr>
@@ -74,7 +74,7 @@ else
     <PageTitle>Detalles sugerencia</PageTitle>
 
     <div class="container w-50 mb-2">
-        <h4 class="text-center">Detalles sugerencia</h4>
+        <h4 class="text-center display-6">Detalles sugerencia</h4>
     </div>
 
     <hr>
