--- a/Shared/Nav.razor
+++ b/Shared/Nav.razor
@@ -1,21 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 0.4rem;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="https://www.utmetropolitana.edu.mx/Publicaciones/recursos/BotonImagen/logo%20UTM%20blanco-01%20copia.png" style="width: 6rem; height: 4rem;"> T'AAN BUS</a>
+    <a class="navbar-brand" href="#"><img src="https://www.utmetropolitana.edu.mx/Publicaciones/recursos/BotonImagen/logo%20UTM%20blanco-01%20copia.png" style="width: 9rem; height: auto;"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02"
       aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor02">
+    <div class="d-flex justify-content-end" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/">Inicio</a>
+          <a class="nav-link h5" href="/">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/quejas">Quejas</a>
+          <a class="nav-link h5" href="/quejas">Quejas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/sugerencias">Sugerencias</a>
+          <a class="nav-link h5" href="/sugerencias">Sugerencias</a>
         </li>
       </ul>
     </div>
