--- a/Pages/Quejas/Index.razor
+++ b/Pages/Quejas/Index.razor
@@ -8,64 +8,67 @@
 @inject HttpClient http
 @inject NavigationManager nav
 
-<h4>Portal de quejas</h4>
+<h3 class="display-6">Portal de quejas</h3>
 <hr>
 <div class="">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum sunt, ex tempora similique obcaecati explicabo
-        hic
-        placeat soluta dolor praesentium repellat vero sapiente accusantium, eos reiciendis. Dolore nisi iusto eaque!.
-        Lorem
-        ipsum dolor sit, amet consectetur adipisicing elit. Commodi odio, velit quo enim earum error ipsam blanditiis
-        ducimus, minus cumque ab deleniti. Provident ad delectus pariatur debitis eum labore ut.</p>
-    <h6>Objetivo</h6>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum iure sunt provident voluptatum expedita
-        consequuntur,
-        esse iste ipsam itaque, numquam repudiandae. Veniam odio modi minima voluptatum, consequuntur itaque cum
-        corporis.
+    <p class="w-75 lead">Se han realizado investigaciones y el 90% de la poblaciónd Mérida ha tenido problemas o no esta
+        conforme con el
+        transporte público que se imparte en la ciudad por lo cuál decidimos crear esta página para poder dar a conocer
+        todo los problemas que las personas hayan vivido, además de que hemos notado muchas irregularidades con personas
+        de la tercera edad, acoso hacía las mujeres, poco respeto a las mujeres embarazadas, pésima higiene y no hay
+        asientos públicos en los paraderos.</p>
+    <h4>Objetivo</h4>
+    <p class="w-75 lead">La voz del pueblo no ha sido escuchada lo suficiente y queremos que todos nuestros problemas
+        salgan a la luz,
+        como pueblo estamos unidos en esto y se necesitan escuchar nuestras quejas, es la manera más optima de obtener
+        opiniones ya que no se necesitan de encuestas físicas, interacción y a cualquier persona le puede llegar para
+        que esta de su opinión ya que tanto en investigaciones y conocidos personales hemos tenido problemas físicos con
+        este servicio que logra dar secuelas psicológicas.
     </p>
 </div>
 <div class="button_">
     <a class="btn btn-danger" href="queja/form">Presentar queja</a>
 </div>
 
-<hr>
+<div class="shadow p-3 mb-5 bg-body rounded w-100 mt-4">
+    <h4>Quejas registradas</h4>
 
-<h5>Quejas registradas</h5>
-
-@if (quejas != null)
-{
-    <table class="mytable table w-100">
-        <thead>
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Motivo</th>
-                <th scope="col">Fecha de hechos</th>
-                <th scope="col">Descripcion</th>
-                <th scope="col">Fecha de registro</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var queja in quejas)
-            {
+    @if (quejas != null)
+    {
+        <table class="mytable table w-100">
+            <thead>
                 <tr>
-                    <td scope="col">@queja.Id</td>
-                    <td scope="col">@queja.MotivoQueja</td>
-                    <td scope="col">@queja.FechaHechos</td>
-                    <td scope="col">@queja.Descripcion</td>
-                    <td scope="col">@queja.FechaRegistro</td>
-                    <td scope="col">
-                        <button class="btn btn-outline-dark" @onclick="() => showQueja(queja.Id)"><i><img
-                            src="https://img.icons8.com/material-outlined/24/000000/edit--v1.png" /></i></button>
-                    </td>
+                    <th scope="col">ID</th>
+                    <th scope="col">Motivo</th>
+                    <th scope="col">Fecha de hechos</th>
+                    <th scope="col">Descripcion</th>
+                    <th scope="col">Fecha de registro</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-    <p><em>Cargando...</em></p>
-}
+            </thead>
+            <tbody>
+                @foreach (var queja in quejas)
+                {
+                    <tr>
+                        <td scope="col">@queja.Id</td>
+                        <td scope="col">@queja.MotivoQueja</td>
+                        <td scope="col">@queja.FechaHechos</td>
+                        <td scope="col">@queja.Descripcion</td>
+                        <td scope="col">@queja.FechaRegistro</td>
+                        <td scope="col">
+                            <button class="btn btn-outline-dark" @onclick="() => showQueja(queja.Id)"><i><img
+                                src="https://img.icons8.com/material-outlined/24/000000/edit--v1.png" /></i></button>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p><em>Cargando...</em></p>
+    }
+
+</div>
 
 
 @code {
