login page added

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject IJSRuntime JsRuntime
 
 <PageTitle>Inicio</PageTitle>
 
@@ -120,3 +121,4 @@
         </div>
     </div>
 </div>
+
