--- a/Shared/Nav.razor
+++ b/Shared/Nav.razor
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="https://www.utmetropolitana.edu.mx/Publicaciones/recursos/BotonImagen/logo%20UTM%20blanco-01%20copia.png" style="width: 9rem; height: auto;"></a>
+    <a class="navbar-brand" href="#"><img src="\images\Utm_logo.png" style="width: 9rem; height: auto;"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02"
       aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -16,6 +16,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link h5" href="/sugerencias">Sugerencias</a>
+        </li>
+           <li class="nav-item">
+          <a class="nav-link h5" href="/login">Iniciar sesión</a>
         </li>
       </ul>
     </div>
