--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -5,12 +5,12 @@
 
 <div class="d-flex justify-content-center mb-4">
     <div class="row w-100 d-flex">
-        <h1 class="display-5">T'aan bus <small class="text-muted">Hablar del camión</small></h1>
+        <h2 class="text-center">T'aan bus <small class="text-muted">Hablar del camión</small></h2>
         <hr>
         <div class="container_taanbus col">
             <div class="row align-items-start">
                 <div class="col">
-                    <p class="lead"> Somos un grupo estudiantil de la UTM que tiene problemas con el transporte público,
+                    <p> Somos un grupo estudiantil de la UTM que tiene problemas con el transporte público,
                         además de
                         que hemos notado en nuestra presencia en los paraderoros públicos que muchas personas tanto
                         niños, embarazadas y de la tercera edad los cuáles sufren ciertos problemas al momento de
@@ -31,20 +31,20 @@
                 <div class="row row-cols-1 shadow p-3 mb-5 bg-body rounded">
                     <div class="col">
                         <h5>Misión</h5>
-                        <p class="lead">Promover un servicio de transporte público cómodo y óptimo para todo público.
+                        <p>Promover un servicio de transporte público cómodo y óptimo para todo público.
                         </p>
                     </div>
                     <div class="col">
                         <h5>Visión</h5>
-                        <p class="lead">Ser una plataforma fiable y confiable para los usuarios del transporte público.
+                        <p>Ser una plataforma fiable y confiable para los usuarios del transporte público.
                         </p>
                     </div>
                     <div class="col">
                         <h5>Valores</h5>
                         <p class="lead">
                         <ul>
-                            <li class="lead">Calidad: Servicios de primer nivel para la comunidad.</li>
-                            <li class="lead">Colaboración: Escuchar y potenciar las ideas innovadoras de la comunidad.
+                            <li>Calidad: Servicios de primer nivel para la comunidad.</li>
+                            <li>Colaboración: Escuchar y potenciar las ideas innovadoras de la comunidad.
                             </li>
                         </ul>
                         </p>
@@ -63,7 +63,7 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="display-6">¿Por qué es importante el transporte público?</h5>
+                <h4 >¿Por qué es importante el transporte público?</h4>
                 <p class="lead">En México diariamente se realizan 130 millones de viajes, mientras que 25% de la
                     población
                     no viaja debido a sus actividades o por la falta de infraestructura, mientras que 80% de los
@@ -82,7 +82,7 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="display-6">¿Por qué usarlo?</h5>
+                <h4 >¿Por qué usarlo?</h4>
                 <p class="lead">
                 <ul>
                     <li>Contamina menos que el vehículo privado. El transporte público es la alternativa más ecológica
@@ -107,8 +107,8 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="display-6">Objetivo</h5>
-                <p class="lead">Nuestro objetivo es mejorar este servicio el cuál hemos calculado gana
+                <h4>Objetivo</h4>
+                <p>Nuestro objetivo es mejorar este servicio el cuál hemos calculado gana
                     una
                     cantidad considerada
                     de dinero, además de que se necesita su mejora, para la apariencia de la ciudad, que
