--- a/Pages/Quejas/Form.razor
+++ b/Pages/Quejas/Form.razor
@@ -13,7 +13,7 @@
     <PageTitle>Presentar queja</PageTitle>
 
     <div class="container w-50 mb-2">
-        <h4 class="text-center display-6">Presentar queja</h4>
+        <h3 class="text-center">Presentar queja</h3>
     </div>
 
     <hr>
