--- a/Shared/Footer.razor
+++ b/Shared/Footer.razor
@@ -2,7 +2,7 @@
     <!-- Grid container -->
     <div class="container p-4"></div>
     <!-- Grid container -->
-    <img src="https://www.utmetropolitana.edu.mx/Publicaciones/recursos/BotonImagen/orgullo%20utm-03.png" style="width: 15rem; height: auto;">
+    <img src="\images\orgullo-utm.png" style="width: 15rem; height: auto;">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: #343a40;">
         © 2022 Copyright:
