--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -1,41 +1,92 @@
 @page "/login"
+@using taanbus.Data.Models
+@inject HttpClient http
+@using System.Net.Http.Json;
+@inject NavigationManager nav
 
+<PageTitle>Iniciar sesión</PageTitle>
 
 <section class="d-flex justify-content-center ">
-    <div class="card mb-3 shadow p-3 mb-5 bg-body rounded w-75" style="max-width: 1020px;">
+    <div class="card mb-3 shadow p-3 mb-2 bg-body rounded w-75" style="max-width: 1020px;">
         <div class="row g-0">
             <div class="col-md-4">
                 <img src="\images\bus.jpeg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h2>Iniciar sesión</h2>
-                    <form>
+                    <h2 class="text-left mx-2">Iniciar sesión</h2>
+                    <EditForm Model="@user">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="email"
-                                placeholder="Correo">
-                            
-                            <label for="email">Correo</label>
+                            <InputText @bind-Value="@user.Username" type="text" class="form-control" id="user"
+                                placeholder="Nombre de usuario"></InputText>
+
+                            <label for="user">Nombre de usuario</label>
                         </div>
-                           <div class="form-floating mb-3">
-                            <input type="password" class="form-control" id="password"
-                                placeholder="Contraseña">
-                            
+                        <div class="form-floating mb-3">
+                            <InputText @bind-Value="@user.Password" type="password" class="form-control" id="password"
+                                placeholder="Contraseña"></InputText>
                             <label for="password">Contraseña</label>
                         </div>
-
-                        <a href="admin" type="submit" class="btn btn-primary">Iniciar Sesión</a>
-                        <button type="submit" class="btn btn-primary"><img
-                                src="\images\google.png" style="width: 1rem; height: auto;"> Continuar con
-                            Google</button>
-                    </form>
+                        <div class="form-floating mb-3">
+                            <a href="register" type="button" class="btn btn-link">¿No tienes cuenta? Registrate aquí</a>
+                        </div>
+                        @if (loading == 0)
+                        {
+                            <button class="btn btn-primary mx-2" type="submit" @onclick="PostLogin">Iniciar sesión</button>
+                        }
+                        @if (userLogged == 1)
+                        {
+                            <button class="btn btn-primary mx-2" disabled><span class="spinner-border spinner-border-sm"
+                                role="status" aria-hidden="true"></span>
+                                Cargando...</button>
+                        }
+                    </EditForm>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
+<div class="w-50 container">
+    @if (userLogged == 0)
+    {
+        <div class="alert alert-danger" role="alert">
+            Credenciales incorrectas
+        </div>
+    }
 
+    @if (userLogged == 1)
+    {
+        <div class="alert alert-success mt-2" role="alert">
+            Credenciales correctas
+        </div>
+    }
+</div>
 @code {
+    int? userLogged;
+    int loading = 0;
+    TokenModel? token = new TokenModel();
+    UserModel user = new UserModel();
+    private async Task PostLogin()
+    {
+        var res = await http.PostAsJsonAsync<UserModel>("api/login", user);
+        token = await res.Content.ReadFromJsonAsync<TokenModel>();
+        if (token.Success == 1)
+        {
+            userLogged = 1;
+            loading = 1;
+            StateHasChanged();
+            await Task.Delay(2000);
+            if (token.UserType == 0)
+            {
+                nav.NavigateTo($"panel_ciudadano/{token.UserId}/{token.TokenOrMessage}");
+            }
+            else
+            {
+                nav.NavigateTo($"panel_administrativo/{token.UserId}/{token.TokenOrMessage}");
+            }
 
+        }
+        userLogged = 0;
+    }
 }
