--- a/Pages/Quejas/Index.razor
+++ b/Pages/Quejas/Index.razor
@@ -8,17 +8,17 @@
 @inject HttpClient http
 @inject NavigationManager nav
 
-<h3 class="display-6">Portal de quejas</h3>
+<h3>Portal de quejas</h3>
 <hr>
 <div class="">
-    <p class="w-75 lead">Se han realizado investigaciones y el 90% de la poblaciónd Mérida ha tenido problemas o no esta
+    <p class="w-75">Se han realizado investigaciones y el 90% de la poblaciónd Mérida ha tenido problemas o no esta
         conforme con el
         transporte público que se imparte en la ciudad por lo cuál decidimos crear esta página para poder dar a conocer
         todo los problemas que las personas hayan vivido, además de que hemos notado muchas irregularidades con personas
         de la tercera edad, acoso hacía las mujeres, poco respeto a las mujeres embarazadas, pésima higiene y no hay
         asientos públicos en los paraderos.</p>
     <h4>Objetivo</h4>
-    <p class="w-75 lead">La voz del pueblo no ha sido escuchada lo suficiente y queremos que todos nuestros problemas
+    <p class="w-75">La voz del pueblo no ha sido escuchada lo suficiente y queremos que todos nuestros problemas
         salgan a la luz,
         como pueblo estamos unidos en esto y se necesitan escuchar nuestras quejas, es la manera más optima de obtener
         opiniones ya que no se necesitan de encuestas físicas, interacción y a cualquier persona le puede llegar para
@@ -26,6 +26,8 @@
         este servicio que logra dar secuelas psicológicas.
     </p>
 </div>
+
+<h4>¿Tienes alguna mala experiencia que desees compartir con la comunidad? Cuéntanos presetentando tu queja!</h4>
 <div class="button_">
     <a class="btn btn-danger" href="queja/form">Presentar queja</a>
 </div>
@@ -38,7 +40,6 @@
         <table class="mytable table w-100">
             <thead>
                 <tr>
-                    <th scope="col">ID</th>
                     <th scope="col">Motivo</th>
                     <th scope="col">Fecha de hechos</th>
                     <th scope="col">Descripcion</th>
@@ -49,7 +50,6 @@
                 @foreach (var queja in quejas)
                 {
                     <tr>
-                        <td scope="col">@queja.Id</td>
                         <td scope="col">@queja.MotivoQueja</td>
                         <td scope="col">@queja.FechaHechos</td>
                         <td scope="col">@queja.Descripcion</td>
@@ -66,8 +66,7 @@
     else
     {
         <p><em>Cargando...</em></p>
-    }
-
+    } 
 </div>
 
 
@@ -78,7 +77,7 @@
     protected override async Task OnInitializedAsync()
     {
         quejas = await http.GetFromJsonAsync<IList<QuejaModel>>(api);
-    }
+    } 
 
     void showQueja(int id)
     {
