--- a/Pages/Register.razor
+++ b/Pages/Register.razor
@@ -1,2 +1,85 @@
 @page "/register"
+@using taanbus.Data.Models
+@inject HttpClient http
+@using System.Net.Http.Json;
+@inject NavigationManager nav
 
+<PageTitle>Registrar usuario</PageTitle>
+
+<section class="d-flex justify-content-center ">
+    <div class="card mb-3 shadow p-3 mb-2 bg-body rounded w-75" style="max-width: 1020px;">
+        <h3>Registro de usuario</h3>
+        <EditForm Model="@user">
+
+            <div class="row g-3">
+                <div class="col">
+                    <div class="form-floating mb-3">
+                        <InputText @bind-Value="@user.Nombre" type="text" class="form-control" id="Nombre"
+                            placeholder="Nombre">
+                        </InputText>
+                        <label for="Nombre">Nombre</label>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-floating mb-3">
+                        <InputText @bind-Value="@user.Apellidos" type="text" class="form-control" id="Apellidos"
+                            placeholder="Apellidos">
+                        </InputText>
+                        <label for="Apellidos">Apellidos</label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-3">
+                <div class="col">
+                    <div class="form-floating mb-3">
+                        <InputText @bind-Value="@user.Correo" type="text" class="form-control" id="Correo"
+                            placeholder="Correo">
+                        </InputText>
+                        <label for="Correo">Correo</label>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-floating mb-3">
+                        <InputText @bind-Value="@user.Telefono" type="text" class="form-control" id="Telefono"
+                            placeholder="Telefono">
+                        </InputText>
+                        <label for="Telefono">Telefono</label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-floating mb-3">
+                <InputText @bind-Value="@user.Username" type="text" class="form-control" id="user"
+                    placeholder="Nombre de usuario"></InputText>
+
+                <label for="user">Nombre de usuario</label>
+            </div>
+            <div class="form-floating mb-3">
+                <InputText @bind-Value="@user.Password" type="password" class="form-control" id="password"
+                    placeholder="Contraseña"></InputText>
+                <label for="password">Contraseña</label>
+            </div>
+
+            <div class="row g-2 ms-1">
+                <button @onclick="RegisterUser" type="submit" class="btn btn-success mt-4 me-4 col-auto">Registrarme</button>
+            </div>
+        </EditForm>
+    </div>
+</section>
+
+@code {
+    UserModel user = new UserModel();
+    private async Task RegisterUser()
+    {
+        try
+        {
+            await http.PostAsJsonAsync<UserModel>($"api/login/register", user);
+        }
+        catch (Exception e)
+        {
+            System.Console.WriteLine(e);
+        }
+        nav.NavigateTo("/ciudadano");
+    }
+}
