--- a/Pages/Sugerencias/Index.razor
+++ b/Pages/Sugerencias/Index.razor
@@ -9,19 +9,21 @@
 @inject NavigationManager nav
 
 
-<h3 class="display-6">Portal de sugerencias</h3>
+<h3>Portal de sugerencias</h3>
 <hr>
-<p class="w-75 lead ">Aquí podrás dejar tu opinión al respecto del transporte público y los paraderos que estos utilizan
+<p class="w-75">Aquí podrás dejar tu opinión al respecto del transporte público y los paraderos que estos utilizan
     ya que todos
     tenemos ideas al respecto de como este servicio se puede mejorar. Se necesita utilizar los recursos tecnológicos
     para obetenr más gente, opiniónes además las personas tienen mucha creatividad, esta se puede implementar en el
     servicio.</p>
 <h4>Objetivo</h4>
-<p class="w-75 lead">Nosotros deseamos que nuestras voces sean escuchadas, el transporte público genera muchos ingresos
+<p class="w-75">Nosotros deseamos que nuestras voces sean escuchadas, el transporte público genera muchos ingresos
     y estos se pueden
     seguir invirtiendo para el beneficio de todos, por lo cuál buscamos más ideas innovadoras para que todos podamos
     disfrutar con mejor calidad el transporte y sus paraderos, queremos alzar nuestra voz por un medio digital actual..
 </p>
+
+<h4>¿Tienes alguna idea o sugerencia para mejorar el servicio de transporte público? Presenta tu sugerencia!</h4>
 <div class="button_">
     <a class="btn btn-success" href="sugerencia/form">Presentar sugerencia</a>
 </div>
@@ -33,7 +35,6 @@
         <table class="mytable table">
             <thead>
                 <tr>
-                    <th scope="col">ID</th>
                     <th scope="col">Ciudadano</th>
                     <th scope="col">Descripcion</th>
                     <th scope="col">Fecha de registro</th>
@@ -43,8 +44,6 @@
                 @foreach (var sugerencia in sugerencias)
                 {
                     <tr>
-                        <td scope="col">@sugerencia.Id</td>
-                        <td scope="col">@sugerencia.NombreCiudadano @sugerencia.ApellidosCiudadano</td>
                         <td scope="col">@sugerencia.Descripcion</td>
                         <td scope="col">@sugerencia.FechaRegistro</td>
                         <td scope="col">
