--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,6 +3,7 @@
 html, body {
     /* font-family: 'Helvetica', Helvetica, Arial, sans-serif; */
     font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
 }
 .container_form{
     width: 50%;
@@ -12,7 +13,7 @@ html, body {
 
 
 .mytable{
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-transform: uppercase;
 }
 
